--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -47,7 +47,7 @@
 				})
 			})
 			var postInfo = function(no, inText, pInfo, curpage) {
-				if (inText.value.length == 0) {
+				if (jQuery.trim(inText.value).length == 0) {
 					mui.toast('不能为空');
 					return;
 				}
@@ -81,7 +81,7 @@
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				postDataPro_PostReUinf({
 					vtp: vtpKey,
-					vvl: inText.value
+					vvl:jQuery.trim(inText.value)
 				}, wd, function(data) {
 					wd.close()
 					console.log(JSON.stringify(data))
