--- a/JiaoBaoYun-hb/html/quan/space-detail.html
+++ b/JiaoBaoYun-hb/html/quan/space-detail.html
@@ -183,9 +183,9 @@
 
 							}
 							console.log('循环遍历后的值：' + JSON.stringify(tempRspData));
-							datasource = tempRspData
-							zonepArray.push(datasource);
-							setSpaceDetail(datasource);
+							
+							PostUmk(tempArray.join(), tempRspData);
+//							setSpaceDetail(datasource);
 
 						} else {
 							mui.toast(data.RspTxt);
@@ -193,6 +193,39 @@
 					});
 
 				}
+			})
+		}
+
+		function PostUmk(upString, tempRspData) {
+			//所需参数
+			var postData = {
+				vvl: upString //被备注用户ID,utid或utid串
+			};
+			var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+			postDataPro_PostUmk(postData, wd, function(data) {
+				wd.close();
+				console.log('获取多用户备注_PostUmk:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+				if(data.RspCode == 0) {
+					console.log('tempRspData='+JSON.stringify(tempRspData))
+					for(var j = 0; j < tempRspData.length; j++) {
+						for(var k = 0; k < data.RspData.length; k++) {
+							console.log(tempRspData[j].utid + '-------' + data.RspData[k].butid)
+							if(tempRspData[j].utid == data.RspData[k].butid) {
+								tempRspData[j].ugname = data.RspData[k].bunick;
+								console.log(JSON.stringify(tempRspData))
+							}
+						}
+
+					}
+
+				} else if(data.RspCode == 0009) {
+
+				}
+				datasource = tempRspData
+				zonepArray.push(datasource);
+				setSpaceDetail(datasource);
+				console.log(JSON.stringify(datasource))
+
 			})
 		}
 
