去除两端空格和回车

--- a/JiaoBaoYun-hb/html/quan/edit-remark.html
+++ b/JiaoBaoYun-hb/html/quan/edit-remark.html
@@ -167,7 +167,10 @@
 				})
 			}
 			var getInputValue = function() {
-				return document.getElementById('remark-input').value;
+				if(document.getElementById('remark-input').value){
+					return jQuery.trim(document.getElementById('remark-input').value.replace(/\/n/g,""));
+				}
+				return "";
 			}
 		</script>
 	</body>
