1、修改老师作业详情一键提醒 2、切换底部菜单 关闭展现预览状态

--- a/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-tea-sub.html
@@ -21,10 +21,10 @@
 	</head>
 
 	<body>
-		<nav id="alertBar" class="mui-bar mui-bar-tab" style="visibility: hidden;">
+		<nav id="alertBar" class="mui-bar mui-bar-tab" style="visibility: hidden;height: 60px;">
 			<hr style="margin-top: -1px; height:1px;border:none;border-top:1px solid #ededed;" />
 			<div align="center" style="margin-top: -5px;">
-				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 5px;width: 300px;background-color: #00a5e0;border-color:#00a5e0 ;">一键提醒</button>
+				<button id="alertAll" type="button" class="mui-btn mui-btn-blue " style="border-radius: 5px;width: 95%;background-color: #00a5e0;border-color:#00a5e0 ;height: 40px">一键提醒</button>
 			</div>
 		</nav>
 		<div class="mui-content mui-scroll-wrapper" style="background-color: white;">
