更新mui日历控件

--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_main.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="../../css/utils/preview.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/utils/MultiMedia.css" />
-
+		<!--<link rel="stylesheet" href="../../css/mui.picker.min.css" />-->
 		<style>
 			.mui-table-view {
 				background: transparent;
@@ -168,6 +168,7 @@
 		<script type="text/javascript" src="../../js/utils/CloudFileUtil.js"></script>
 		<script type="text/javascript" src="../../js/storageKeyName.js"></script>
 		<script type="text/javascript" src="../../js/utils/compress.js"></script>
+		<!--<script type="text/javascript" src="../../js/mui.picker.min.js" ></script>-->
 		<script type="text/javascript">
 			var main; //获取当前窗体对象
 			var mainData; //接收页面传入的参数值
