--- a/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
@@ -296,14 +296,17 @@
 
 				switch(mainData.mstype) { //被邀请成为类型（0家长,2老师,3学生）
 					case 'student':
+					case 3:
 						mainData.typestr = '学生';
 						mainData.type = '3';
 						break;
 					case 'teacher':
+					case 2:
 						mainData.typestr = '老师';
 						mainData.type = '2';
 						break;
 					case 'parents':
+					case 0:
 						mainData.typestr = '家长';
 						mainData.type = '0';
 						break;
