邀请群成员

--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -21,7 +21,7 @@
 			<h1 class="mui-title">
 				<div class="search-form">
 					<div class="mui-input-row  ">
-						<input id="search-group" type="search" class="mui-input-clear" placeholder="通过群成员手机号或用户名搜索群">
+						<input id="search-group" type="search" class="mui-input-clear search-input" placeholder="通过群成员手机号或用户名搜索群">
 						<input id="search-btn" type="submit" class="search-btn" value="搜索" />
 					</div>
 				</div>
@@ -72,9 +72,10 @@
 			<div id="chose-roles" class="mui-popover center-popover">
 			<div class="pop-title">
 				<div class="title-left"></div>
-				<div class="title-middle">请选择身份</div>
+				<div class="title-middle">验证信息</div>
 				<span id="btn-cancle" class="title-right iconfont icon-guanbi1"></span>
 			</div>
+			<p class="pop-hint">请选择身份</p>
 			<div class="chose-container">
 				<div class="div-chose">
 					<input id="check-parents" name="checkbox1" type="radio" value="0">
