--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -9,6 +9,7 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 		<link href="../../css/mui.min.css" rel="stylesheet" />
 		<link href="../../css/utils/common.css" rel="stylesheet" />
+		<link href="../../css/iconfont/iconfont.css" rel="stylesheet" />
 		<link href="../../css/quan/class_space.css" rel="stylesheet" />
 		<style>
 			.mui-table-view-cell {
@@ -40,9 +41,37 @@
 				</ul>
 			</div>
 		</div>
+		<div id="chose-roles" class="mui-popover center-popover">
+			<div class="pop-title">
+				<div class="title-left"></div>
+				<div class="title-middle">验证信息</div>
+				<span id="btn-cancle" class="title-right iconfont icon-guanbi1"></span>
+			</div>
+			<p class="pop-hint">请选择身份</p>
+			<div class="chose-container">
+				<div class="div-chose">
+					<input id="check-parents" name="checkbox1" type="radio" value="0">
+					<label>家长</label>
+				</div>
+				<div class="div-chose">
+					<input id="check-tea" name="checkbox1" type="radio" value="2">
+					<label>老师</label>
+				</div>
+				<div class="div-chose">
+					<input id="check-stu" name="checkbox1" type="radio" value="3">
+					<label>学生</label>
+				</div>
+			</div>
+		<!--	<textarea id="extra-input" class="extra-input" placeholder="请输入备注信息，最多20字"></textarea>-->
+			<div class="buttons">
+				<button id="btn-sure" type="button" class="mui-btn mui-btn-green btn-sure">确认</button>
+				<!--<button  type="button" class="mui-btn mui-btn-green btn-cancel">取消</button>-->
+			</div>
+		</div>
 		<div class="quit-container display-none">
 			<button id="quit-group" type="button" class="mui-btn mui-btn-danger group-button  ">退出</button>
 		</div>
+
 	</body>
 	<script src="../../js/mui.min.js"></script>
 	<!--公共接口js-->
