调整邀请界面

--- a/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
@@ -299,15 +299,18 @@
 					case 3:
 						mainData.typestr = '学生';
 						mainData.type = '3';
+						mainData.mstype = 'student';
 						break;
 					case 'teacher':
 					case 2:
 						mainData.typestr = '老师';
 						mainData.type = '2';
+						mainData.mstype = 'teacher';
 						break;
 					case 'parents':
 					case 0:
 						mainData.typestr = '家长';
+						mainData.mstype = 'parents';
 						mainData.type = '0';
 						break;
 					default:
