--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetailSub.html
@@ -72,6 +72,16 @@
 				</li>
 			</ul>
 		</div>
+		<div id="popover-2" class="mui-popover">
+			<ul class="mui-table-view">
+				<li id="change-pop" value="0" class="mui-table-view-cell ">
+					<a class="mui-navigate-right">修改</a>
+				</li>
+				<li id="del-pop" value="1" class="mui-table-view-cell">
+					<a class="mui-navigate-right">删除</a>
+				</li>
+			</ul>
+		</div>
 		<!--mui.js-->
 		<script src="../../js/mui.min.js"></script>
 		<!--公共方法js-->
