--- a/JiaoBaoYun-hb/html/quan/class-group.html
+++ b/JiaoBaoYun-hb/html/quan/class-group.html
@@ -44,10 +44,9 @@
 		<div id="chose-roles" class="mui-popover center-popover">
 			<div class="pop-title">
 				<div class="title-left"></div>
-				<div class="title-middle">验证信息</div>
+				<div class="title-middle">请选择身份</div>
 				<span id="btn-cancle" class="title-right iconfont icon-guanbi1"></span>
 			</div>
-			<p class="pop-hint">请选择身份</p>
 			<div class="chose-container">
 				<div class="div-chose">
 					<input id="check-parents" name="checkbox1" type="radio" value="0">
